fixed-overflow

--- a/css/sao-geraldo-main.css
+++ b/css/sao-geraldo-main.css
@@ -22,7 +22,13 @@
 }
 
 body {
+    overflow-x: hidden !important; 
     font-family: Arial, Helvetica, sans-serif;
+}
+
+
+html{
+    overflow-x: hidden !important; 
 }
 
 
